tests/frost/pass/a6.mle
val id : forall a . a -> a
val auto' : forall b . (forall a . a -> a) -> (b -> b)

let infer = id auto'

-- val check : forall b . (forall a . a -> a) -> (b -> b)
-- let check = id auto'
